src/styles/layout/_sticky-footer.scss
// Flexbox Sticky Footer
// https://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer

body {
  display: flex;
  flex-direction: column;
  min-height: 100%;
}

.content-wrapper {
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
  min-height: 100%;
}

.react-root {
  position: relative;
  z-index: 1;
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
  min-height: 100%;
}

main {
  flex: 1 0 auto;
}

